--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 <body>
+  <head>
+    <title>Home</title>
+  </head>
+</body>
 <h1>Bio</h1>
 <p>I'm hosted with GitHub Pages.</p>
-</body>
 </html>
