--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
 </body>
 <h1>Bio</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>XXXXX</p>
+<a href="https://cyustcer.github.io">Home</a>
 </html>
